[package]
name = "digibib"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
binrw = "0.11.1"
clap = { version = "4.2.5", features = ["derive"] }
color-eyre = "0.6.2"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
eyre = "0.6.8"
once_cell = "1.17.1"
ormlite = { version = "0.14.0", features = ["sqlite", "json"] }
prost = "0.11.9"
prost-types = "0.11.9"
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
tikv-jemallocator = "0.5.0"
tokio = { version = "1.28.0", features = ["macros"] }
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
incremental = true
debug = true
lto = "thin"

[build-dependencies]
prost-build = "0.11.9"
